<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/nong1" >
    
    

 
  <EditText
      android:id="@+id/name"
      android:layout_width="130dp"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="false"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="205dp"
      android:hint="@string/hello_world"
      android:textSize="13dp"
      android:gravity="center"
      android:background="#ccc"
      tools:context=".LoginActivity" />
  
  <Button
      android:id="@+id/btn_sure"
      android:layout_width="30dp"
      android:layout_height="34dp"
      android:layout_alignParentLeft="false"
      android:layout_marginLeft="230dp"
      android:layout_marginTop="205dp"
      android:background="#ccc"
      android:gravity="center"
      android:text="@string/sure"
      android:textSize="13dp"
      tools:context=".LoginActivity" />
  
  
  
  <TextView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/power"
	android:layout_marginTop="450dip"
	android:textColor="#000"	
	android:layout_gravity="center_horizontal"
	android:textSize="13sp"
	android:layout_marginLeft="100dp"
/>

</RelativeLayout>

